fix(gtk/apps): ensure that labels without backgrounds are readable

--- a/gtk/src/light/gtk-3.0/_apps.scss
+++ b/gtk/src/light/gtk-3.0/_apps.scss
@@ -40,6 +40,10 @@ list.tweak-categories separator {
   color: $fg_color;
 }
 
+.color-dark.horizontal.timed > stack > grid > label {
+  color: $fg_color;
+}
+
 /***********
 * Nautilus *
 ***********/
